feat: add list devices endpoint
